--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "greatstack123"
 
 # MongoDB Setup ( required )
-MONGODB_URI = "mongodb+srv://gilman:gilman%4004@cluster0.jgqdvdx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI = "mongodb+srv://gilman:gilman%4004@cluster0.jgqdvdx.mongodb.net/?appName=Cluster0"
 
 # Cloudinary Setup ( required )
 CLOUDINARY_NAME = "dgd2zwkgf"
